apps/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  selector:
    app: example
  ports:
    - port: 80
      targetPort: 80
