apps/example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - example.CHANGE-ME.apps.domain
      secretName: example-tls
  rules:
    - host: example.CHANGE-ME.apps.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example
                port:
                  number: 80
